# satellite-overpass-identification-tool

./: .gitignore  README.md  pyproject.toml  satellite_overpass_identification_tool.py
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: ci.yml
src/satellite_overpass_identification_tool/: __main__.py  app.py  credentials.py  download.py  soit.py
tests/: conftest.py  test_closest_pass_helpers.py  test_get_credentials.py  test_get_data_error_handling.py  test_get_passtimes.py  test_main_cli.py  test_main_csv_writer.py  test_main_regression.py
