[project]
name="satellite-overpass-identification-tool"
version = "2024.11.4"
authors = [
    {name="Simon Hatcher"},
    {name="Timothy Divoll", email = "timothy_divoll@brown.edu"},
    {name="John Gerrard Holland", email = "john_holland1@brown.edu"}
]
requires-python = ">= 3.10"
dependencies = [
  "requests==2.33.1",
  "skyfield==1.54",
  "numpy==2.4.4",
]

[project.optional-dependencies]
dev = ["pytest", "pyfakefs"]

[project.scripts]
soit="satellite_overpass_identification_tool:main"
satellite-overpass-identification-tool="satellite_overpass_identification_tool:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
addopts = ["--doctest-modules"]
markers = [
    "integration: marks tests as integration tests (require network and credentials)",
]

[tool.isort]
profile = "black"